log

Wed 16 Aug 2023 10:04:57 PM UTC: 
 exercises.c | 133 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 125 insertions(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:69:14: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   69 |     *newSize = j;
      |     ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
415ee61
Wed 16 Aug 2023 10:05:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
89092b9
Wed 16 Aug 2023 10:07:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
fa6f436
Wed 16 Aug 2023 10:17:35 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|1
total_score: 60/70
7d41d38
Wed 16 Aug 2023 10:29:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
f8e9fcf
Wed 16 Aug 2023 10:39:41 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|1
total_score: 60/70
83905e1
Wed 16 Aug 2023 10:43:34 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
8a14ce7
Wed 16 Aug 2023 10:45:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
a0c2162
Wed 16 Aug 2023 10:49:16 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
  152 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9fb29f5
Thu 17 Aug 2023 06:40:59 PM UTC: 
 exercises.c | 39 ++++++++++++---------------------------
 1 file changed, 12 insertions(+), 27 deletions(-)
 tests:  0|0
total_score: 70/70
444f943
